[MODORDERS-480] - Fix tests